@@ -17,15 +17,16 @@
 				<?php endif;?>
 
 			</div>
-			<div class="user-is-typing" id="user-is-typing-<?php echo $chat->id?>">
-				<?php echo erTranslationClassLhTranslation::getInstance()->getTranslation('chat/chat','User is typing now...')?>
-			</div>
+			
 		</div>
 
 		<?php include(erLhcoreClassDesign::designtpl('lhchat/part/above_textarea.tpl.php')); ?>
 
 		<textarea rows="4" <?php if ($chat->status == erLhcoreClassModelChat::STATUS_CLOSED_CHAT) : ?>readonly="readonly"<?php endif;?> name="ChatMessage" id="CSChatMessage-<?php echo $chat->id?>"></textarea>
-
+		<div class="user-is-typing" id="user-is-typing-<?php echo $chat->id?>">
+				<?php echo erTranslationClassLhTranslation::getInstance()->getTranslation('chat/chat','User is typing now...')?>
+		</div>
+			
 		<script type="text/javascript">
 		jQuery('#CSChatMessage-<?php echo $chat->id?>').bind('keydown', 'return', function (evt){
 		    lhinst.addmsgadmin('<?php echo $chat->id?>');
